runtime/shared-platform/manifests/payment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
  namespace: mayabank-api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: payment-api
  template:
    metadata:
      labels:
        app: payment-api
        app.kubernetes.io/part-of: mayabank-api-management
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: payment-api
          image: image-registry.openshift-image-registry.svc:5000/mayabank-api/payment-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            runAsNonRoot: true
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: payment-api
  namespace: mayabank-api
spec:
  selector:
    app: payment-api
  ports:
    - name: http
      port: 8080
      targetPort: http
